fixed navbar on small screens

--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ header {
     top: 60px;
     right: 0;
     width: 200px;
-    text-align: right;
+    text-align: center;
     padding: 1rem;
   }
 
